--- a/src/notebooks/iris_analys.ipynb
+++ b/src/notebooks/iris_analys.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,25 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sns' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m os.chdir(\u001b[33m\"\u001b[39m\u001b[33m/Users/nikolaynechay/Iris-Species\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m sns.set(style=\u001b[33m'\u001b[39m\u001b[33mwhite\u001b[39m\u001b[33m'\u001b[39m, color_codes=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'sns' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.chdir(\"/Users/nikolaynechay/Iris-Species\")\n",
-    "\n",
-    "sns.set(style='white', color_codes=True)"
+    "os.chdir(\"/Users/nikolaynechay/Iris-Species\")"
    ]
   },
   {
@@ -69,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,107 +80,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_f3e10_row0_col0, #T_f3e10_row3_col2, #T_f3e10_row4_col1 {\n",
+       "#T_5eee2_row0_col0, #T_5eee2_row3_col2, #T_5eee2_row4_col1 {\n",
        "  background-color: #023858;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_f3e10_row0_col1 {\n",
+       "#T_5eee2_row0_col1 {\n",
        "  background-color: #046198;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_f3e10_row0_col2, #T_f3e10_row1_col2, #T_f3e10_row4_col2 {\n",
+       "#T_5eee2_row0_col2, #T_5eee2_row1_col2, #T_5eee2_row4_col2 {\n",
        "  background-color: #75a9cf;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_f3e10_row0_col3, #T_f3e10_row1_col1, #T_f3e10_row1_col3, #T_f3e10_row2_col2, #T_f3e10_row2_col3, #T_f3e10_row3_col0, #T_f3e10_row3_col3, #T_f3e10_row4_col3 {\n",
+       "#T_5eee2_row0_col3, #T_5eee2_row1_col1, #T_5eee2_row1_col3, #T_5eee2_row2_col2, #T_5eee2_row2_col3, #T_5eee2_row3_col0, #T_5eee2_row3_col3, #T_5eee2_row4_col3 {\n",
        "  background-color: #fff7fb;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_f3e10_row1_col0 {\n",
+       "#T_5eee2_row1_col0 {\n",
        "  background-color: #4295c3;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_f3e10_row2_col0 {\n",
+       "#T_5eee2_row2_col0 {\n",
        "  background-color: #dbdaeb;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_f3e10_row2_col1 {\n",
+       "#T_5eee2_row2_col1 {\n",
        "  background-color: #b4c4df;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_f3e10_row3_col1 {\n",
+       "#T_5eee2_row3_col1 {\n",
        "  background-color: #e3e0ee;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_f3e10_row4_col0 {\n",
+       "#T_5eee2_row4_col0 {\n",
        "  background-color: #0567a2;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_f3e10\">\n",
+       "<table id=\"T_5eee2\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_f3e10_level0_col0\" class=\"col_heading level0 col0\" >SepalLengthCm</th>\n",
-       "      <th id=\"T_f3e10_level0_col1\" class=\"col_heading level0 col1\" >SepalWidthCm</th>\n",
-       "      <th id=\"T_f3e10_level0_col2\" class=\"col_heading level0 col2\" >PetalLengthCm</th>\n",
-       "      <th id=\"T_f3e10_level0_col3\" class=\"col_heading level0 col3\" >PetalWidthCm</th>\n",
-       "      <th id=\"T_f3e10_level0_col4\" class=\"col_heading level0 col4\" >Species</th>\n",
+       "      <th id=\"T_5eee2_level0_col0\" class=\"col_heading level0 col0\" >SepalLengthCm</th>\n",
+       "      <th id=\"T_5eee2_level0_col1\" class=\"col_heading level0 col1\" >SepalWidthCm</th>\n",
+       "      <th id=\"T_5eee2_level0_col2\" class=\"col_heading level0 col2\" >PetalLengthCm</th>\n",
+       "      <th id=\"T_5eee2_level0_col3\" class=\"col_heading level0 col3\" >PetalWidthCm</th>\n",
+       "      <th id=\"T_5eee2_level0_col4\" class=\"col_heading level0 col4\" >Species</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_f3e10_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_f3e10_row0_col0\" class=\"data row0 col0\" >5.100000</td>\n",
-       "      <td id=\"T_f3e10_row0_col1\" class=\"data row0 col1\" >3.500000</td>\n",
-       "      <td id=\"T_f3e10_row0_col2\" class=\"data row0 col2\" >1.400000</td>\n",
-       "      <td id=\"T_f3e10_row0_col3\" class=\"data row0 col3\" >0.200000</td>\n",
-       "      <td id=\"T_f3e10_row0_col4\" class=\"data row0 col4\" >Iris-setosa</td>\n",
+       "      <th id=\"T_5eee2_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_5eee2_row0_col0\" class=\"data row0 col0\" >5.100000</td>\n",
+       "      <td id=\"T_5eee2_row0_col1\" class=\"data row0 col1\" >3.500000</td>\n",
+       "      <td id=\"T_5eee2_row0_col2\" class=\"data row0 col2\" >1.400000</td>\n",
+       "      <td id=\"T_5eee2_row0_col3\" class=\"data row0 col3\" >0.200000</td>\n",
+       "      <td id=\"T_5eee2_row0_col4\" class=\"data row0 col4\" >Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f3e10_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_f3e10_row1_col0\" class=\"data row1 col0\" >4.900000</td>\n",
-       "      <td id=\"T_f3e10_row1_col1\" class=\"data row1 col1\" >3.000000</td>\n",
-       "      <td id=\"T_f3e10_row1_col2\" class=\"data row1 col2\" >1.400000</td>\n",
-       "      <td id=\"T_f3e10_row1_col3\" class=\"data row1 col3\" >0.200000</td>\n",
-       "      <td id=\"T_f3e10_row1_col4\" class=\"data row1 col4\" >Iris-setosa</td>\n",
+       "      <th id=\"T_5eee2_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_5eee2_row1_col0\" class=\"data row1 col0\" >4.900000</td>\n",
+       "      <td id=\"T_5eee2_row1_col1\" class=\"data row1 col1\" >3.000000</td>\n",
+       "      <td id=\"T_5eee2_row1_col2\" class=\"data row1 col2\" >1.400000</td>\n",
+       "      <td id=\"T_5eee2_row1_col3\" class=\"data row1 col3\" >0.200000</td>\n",
+       "      <td id=\"T_5eee2_row1_col4\" class=\"data row1 col4\" >Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f3e10_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_f3e10_row2_col0\" class=\"data row2 col0\" >4.700000</td>\n",
-       "      <td id=\"T_f3e10_row2_col1\" class=\"data row2 col1\" >3.200000</td>\n",
-       "      <td id=\"T_f3e10_row2_col2\" class=\"data row2 col2\" >1.300000</td>\n",
-       "      <td id=\"T_f3e10_row2_col3\" class=\"data row2 col3\" >0.200000</td>\n",
-       "      <td id=\"T_f3e10_row2_col4\" class=\"data row2 col4\" >Iris-setosa</td>\n",
+       "      <th id=\"T_5eee2_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_5eee2_row2_col0\" class=\"data row2 col0\" >4.700000</td>\n",
+       "      <td id=\"T_5eee2_row2_col1\" class=\"data row2 col1\" >3.200000</td>\n",
+       "      <td id=\"T_5eee2_row2_col2\" class=\"data row2 col2\" >1.300000</td>\n",
+       "      <td id=\"T_5eee2_row2_col3\" class=\"data row2 col3\" >0.200000</td>\n",
+       "      <td id=\"T_5eee2_row2_col4\" class=\"data row2 col4\" >Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f3e10_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_f3e10_row3_col0\" class=\"data row3 col0\" >4.600000</td>\n",
-       "      <td id=\"T_f3e10_row3_col1\" class=\"data row3 col1\" >3.100000</td>\n",
-       "      <td id=\"T_f3e10_row3_col2\" class=\"data row3 col2\" >1.500000</td>\n",
-       "      <td id=\"T_f3e10_row3_col3\" class=\"data row3 col3\" >0.200000</td>\n",
-       "      <td id=\"T_f3e10_row3_col4\" class=\"data row3 col4\" >Iris-setosa</td>\n",
+       "      <th id=\"T_5eee2_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_5eee2_row3_col0\" class=\"data row3 col0\" >4.600000</td>\n",
+       "      <td id=\"T_5eee2_row3_col1\" class=\"data row3 col1\" >3.100000</td>\n",
+       "      <td id=\"T_5eee2_row3_col2\" class=\"data row3 col2\" >1.500000</td>\n",
+       "      <td id=\"T_5eee2_row3_col3\" class=\"data row3 col3\" >0.200000</td>\n",
+       "      <td id=\"T_5eee2_row3_col4\" class=\"data row3 col4\" >Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_f3e10_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_f3e10_row4_col0\" class=\"data row4 col0\" >5.000000</td>\n",
-       "      <td id=\"T_f3e10_row4_col1\" class=\"data row4 col1\" >3.600000</td>\n",
-       "      <td id=\"T_f3e10_row4_col2\" class=\"data row4 col2\" >1.400000</td>\n",
-       "      <td id=\"T_f3e10_row4_col3\" class=\"data row4 col3\" >0.200000</td>\n",
-       "      <td id=\"T_f3e10_row4_col4\" class=\"data row4 col4\" >Iris-setosa</td>\n",
+       "      <th id=\"T_5eee2_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_5eee2_row4_col0\" class=\"data row4 col0\" >5.000000</td>\n",
+       "      <td id=\"T_5eee2_row4_col1\" class=\"data row4 col1\" >3.600000</td>\n",
+       "      <td id=\"T_5eee2_row4_col2\" class=\"data row4 col2\" >1.400000</td>\n",
+       "      <td id=\"T_5eee2_row4_col3\" class=\"data row4 col3\" >0.200000</td>\n",
+       "      <td id=\"T_5eee2_row4_col4\" class=\"data row4 col4\" >Iris-setosa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x15a43f4d0>"
+       "<pandas.io.formats.style.Styler at 0x12efb5b50>"
       ]
      },
      "metadata": {},
@@ -207,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
