--- a/src/notebooks/iris_analys.ipynb
+++ b/src/notebooks/iris_analys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1024,
+   "execution_count": 1096,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 1097,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1026,
+   "execution_count": 1098,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1027,
+   "execution_count": 1099,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1028,
+   "execution_count": 1100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1029,
+   "execution_count": 1101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1030,
+   "execution_count": 1102,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 1030,
+     "execution_count": 1102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1031,
+   "execution_count": 1103,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "98             5.1           2.5            3.0           1.1"
       ]
      },
-     "execution_count": 1031,
+     "execution_count": 1103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1032,
+   "execution_count": 1104,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1033,
+   "execution_count": 1105,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1034,
+   "execution_count": 1106,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1035,
+   "execution_count": 1107,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
        "119       False  "
       ]
      },
-     "execution_count": 1035,
+     "execution_count": 1107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1036,
+   "execution_count": 1108,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "133       False  "
       ]
      },
-     "execution_count": 1036,
+     "execution_count": 1108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1037,
+   "execution_count": 1109,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1038,
+   "execution_count": 1110,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1039,
+   "execution_count": 1111,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1040,
+   "execution_count": 1112,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
        "4                              NaN                             NaN        NaN  "
       ]
      },
-     "execution_count": 1040,
+     "execution_count": 1112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1041,
+   "execution_count": 1113,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1610,7 @@
        "113     14.814  "
       ]
      },
-     "execution_count": 1041,
+     "execution_count": 1113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1042,
+   "execution_count": 1114,
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
        "19                          -13.700                          -4.605     14.814  "
       ]
      },
-     "execution_count": 1042,
+     "execution_count": 1114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1043,
+   "execution_count": 1115,
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1044,
+   "execution_count": 1116,
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1045,
+   "execution_count": 1117,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
        "4                                 0.833  "
       ]
      },
-     "execution_count": 1045,
+     "execution_count": 1117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2184,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1046,
+   "execution_count": 1118,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1047,
+   "execution_count": 1119,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2348,7 @@
        "4             0.107             0.893             0.001        True  "
       ]
      },
-     "execution_count": 1047,
+     "execution_count": 1119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,7 +2373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1048,
+   "execution_count": 1120,
    "metadata": {},
    "outputs": [
     {
@@ -2407,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1049,
+   "execution_count": 1121,
    "metadata": {},
    "outputs": [
     {
@@ -2441,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1050,
+   "execution_count": 1122,
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2579,7 @@
        "108             0.003             0.492             0.504       False  "
       ]
      },
-     "execution_count": 1050,
+     "execution_count": 1122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2598,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1051,
+   "execution_count": 1123,
    "metadata": {},
    "outputs": [
     {
@@ -2644,7 +2644,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 1051,
+     "execution_count": 1123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1052,
+   "execution_count": 1124,
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1053,
+   "execution_count": 1125,
    "metadata": {},
    "outputs": [
     {
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1054,
+   "execution_count": 1126,
    "metadata": {},
    "outputs": [
     {
@@ -2746,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1055,
+   "execution_count": 1127,
    "metadata": {},
    "outputs": [
     {
@@ -3205,7 +3205,7 @@
        "4                                                     NaN        NaN  "
       ]
      },
-     "execution_count": 1055,
+     "execution_count": 1127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3225,7 +3225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1056,
+   "execution_count": 1128,
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3759,7 @@
        "108                                                   0.107     -16.61  "
       ]
      },
-     "execution_count": 1056,
+     "execution_count": 1128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3780,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1057,
+   "execution_count": 1129,
    "metadata": {},
    "outputs": [
     {
@@ -3858,7 +3858,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 1057,
+     "execution_count": 1129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3879,7 +3879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1058,
+   "execution_count": 1130,
    "metadata": {},
    "outputs": [
     {
@@ -3976,7 +3976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1059,
+   "execution_count": 1131,
    "metadata": {},
    "outputs": [
     {
@@ -4001,6 +4001,13 @@
     "    df=working_test_error_df,\n",
     "    feature_names=generated_test_measurements.columns.tolist()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, the applied approach did not yield the desired result; while adding new features based on pairwise relationships helped mitigate the impact of mutants, it did not reduce the dominance of the `PetalLengthCm` feature.\n"
    ]
   },
   {
